Added initial version of the application

--- a/intake/build.gradle
+++ b/intake/build.gradle
@@ -1,4 +1,4 @@
-buildscript {
+    buildscript {
 	ext {
 		springBootVersion = '2.1.0.RELEASE'
 	}
@@ -25,8 +25,11 @@ repositories {
 
 
 dependencies {
+	implementation('javax.servlet:servlet-api:2.5')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    }
 	implementation('org.liquibase:liquibase-core')
 	runtimeOnly('org.postgresql:postgresql')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
