Added events, ui applications.

--- a/intake/build.gradle
+++ b/intake/build.gradle
@@ -25,11 +25,11 @@ repositories {
 
 
 dependencies {
-	implementation('javax.servlet:servlet-api:2.5')
+	//implementation('javax.servlet:servlet-api:2.5')
+	implementation("org.springframework.boot:spring-boot-starter-websocket")
+	implementation('org.springframework.boot:spring-boot-starter-activemq')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation('org.springframework.boot:spring-boot-starter-web') {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-    }
+    implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.liquibase:liquibase-core')
 	runtimeOnly('org.postgresql:postgresql')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
