--- a/intake/docker/Dockerfile
+++ b/intake/docker/Dockerfile
@@ -1,16 +1,19 @@
 FROM openjdk:8-jdk-alpine
 
-RUN sh -c 'groupadd microservices'
-RUN sh -c 'useradd ui_intake -g microservices'
-RUN sh -c 'mkdir /user/local/microservices/intake/'
+RUN sh -c 'addgroup microservices'
+RUN sh -c 'adduser -D usr_intake -g microservices'
+
+RUN sh -c 'mkdir -p /user/local/microservices/intake/'
 COPY *.jar /user/local/microservices/intake/app.jar
 
 RUN sh -c 'touch /user/local/microservices/intake/app.jar'
-RUN sh -c 'chown -R ui_intake:microservices /user/local/microservices/intake'
+RUN sh -c 'chown -R usr_intake:microservices /user/local/microservices/intake'
 
 EXPOSE 8080
 
-USER ui_intake
+USER usr_intake
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/user/local/microservices/intake/app.jar"]
+
+
 
 
