minor tweaks to docker file.

--- a/ui/docker/Dockerfile
+++ b/ui/docker/Dockerfile
@@ -1,14 +1,16 @@
 FROM openjdk:8-jdk-alpine
 
-RUN sh -c 'groupadd microservices'
-RUN sh -c 'useradd ui_user -g microservices'
-RUN sh -c 'mkdir /user/local/microservices/ui/'
-COPY *.jar /user/local/microservices/ui/app.jar
+RUN sh -c 'addgroup microservices'
+RUN sh -c 'adduser -D usr_ui -g microservices'
 
-RUN sh -c ' touch /user/local/microservices/ui/app.jar'
-RUN sh -c 'chown -R ui_user:microservices /user/local/microservices/ui'
+RUN sh -c 'mkdir -p /user/local/microservices/intake/'
+COPY *.jar /user/local/microservices/intake/app.jar
 
-EXPOSE 8081
+RUN sh -c 'touch /user/local/microservices/intake/app.jar'
+RUN sh -c 'chown -R usr_ui:microservices /user/local/microservices/intake'
 
-USER ui_user
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/user/local/microservices/ui/app.jar"]
+EXPOSE 8082
+
+USER usr_ui
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/user/local/microservices/intake/app.jar"]
+
