--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -2,8 +2,14 @@ pipeline {
     agent { docker { image 'maven:3.3.3' } }
     stages {
         stage('build') {
+            steps {pipeline {
+    agent {
+        docker { image 'node:7-alpine' }
+    }
+    stages {
+        stage('Test') {
             steps {
-                sh 'mvn --version'
+                sh 'node --version'
             }
         }
     }
