--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,11 +1,11 @@
 pipeline {
     agent {
-        docker { image 'node:7-alpine' }
+        docker { image 'gradle' }
     }
     stages {
         stage('Test') {
             steps {
-                sh 'node --version'
+                sh 'gradle --version'
             }
         }
     }
