--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
             steps {
                 sh 'git clone https://github.com/swatturkar/openshift-poc.git'
                 sh 'cd openshift-poc/intake'
-                sh 'gradle clean build'
+                sh 'gradle build'
                 sh 'gradle --version'
             }
         }
