--- a/intake/Jenkinsfile
+++ b/intake/Jenkinsfile
@@ -15,5 +15,17 @@ node {
 	}
     }
 
+    stage('Build image') {
+ 	dir ('intake'){
+        	app = docker.build("intake")
+	}
+    }
+    
+   stage('Push image') {
+        docker.withRegistry('http:nexus3-registry.okd.pyramidchallenges.com/docker-devt/my-image', '0be12b2b-d89f-405d-bd08-cbfaceebe02d') {
+            app.push("${env.BUILD_NUMBER}")
+            app.push("latest")
+        }
+    }
 
 }
